# GridcoinScraper

./: .gitignore  CMakeLists.txt  README.md
include/model/: db.h  fwd.h  project.h  researcher.h  sqlite_db.h
include/scraper/: downloader.h  scraper.h
src/: main.cpp
src/model/: researcher.cpp  sqlite_db.cpp  sqlite_db.h
src/scraper/: calculator.cpp  calculator.h  downloader.cpp  downloader.h  processor.cpp  processor.h  scraper.cpp
